--- a/src/css/index.css
+++ b/src/css/index.css
@@ -15,6 +15,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
