--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,8 +1,7 @@
 :root {
   /* Colors */
-  --dark-blue: #272643;
+  --dark-blue: #2c2842;
   --white: #ffffff;
-  --light-blue-1: #e3f6f5;
-  --light-blue-2: #bae8e8;
-  --light-blue-3: #2c698d;
+  --light-blue: #56a1f5;
+  --light-pink: #fbd8d8;
 }
