--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -49,9 +49,23 @@
 }
 
 .select-container .selected-item {
+  position: relative;
   padding: 16px;
   background: var(--white);
   border-radius: 8px;
+  cursor: pointer;
+}
+
+.select-container .selected-item:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  background: url(../images/down-arrow.svg) no-repeat center;
+  background-size: 100%;
+  width: 14px;
+  height: 20px;
+  transform: translateY(-50%);
 }
 
 .select-container .select-options {
