--- a/src/css/info.css
+++ b/src/css/info.css
@@ -51,3 +51,19 @@
     opacity: 1;
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .info {
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-right-radius: 0;
+  }
+  .info .info-content {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+@media screen and (max-width: 630px) {
+  .info .info-content {
+    grid-template-columns: auto;
+  }
+}
